# ChangeLog for net-misc/zaptel
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.15 2004/09/23 23:57:02 stkn Exp $

*zaptel-1.0.0 (24 Sep 2004)

  24 Sep 2004; <stkn@gentoo.org>
  +files/zaptel-1.0.0-experimental-devfs26.diff,
  +files/zaptel-1.0.0-modulesd.diff, +zaptel-1.0.0.ebuild:
  version bump

  06 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> zaptel-0.7.0.ebuild,
  zaptel-0.8.1.ebuild, zaptel-0.9.1.ebuild:
  Switch to use epause and ebeep, bug #62950

  27 Jul 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.9.1.ebuild:
  stable on x86

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> zaptel-0.7.0.ebuild,
  zaptel-0.8.1.ebuild, zaptel-0.9.1.ebuild:
  change virtual/glibc to virtual/libc

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> zaptel-0.7.0.ebuild,
  zaptel-0.8.1.ebuild, zaptel-0.9.1.ebuild:
  Fix use invocation

  10 May 2004; David Holm <dholm@gentoo.org> zaptel-0.9.1.ebuild:
  Added to ~ppc.

*zaptel-0.9.1 (10 May 2004)

  10 May 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.9.1.ebuild,
  files/zaptel-0.9.1-experimental-devfs26.diff,
  files/zaptel-0.9.1-modulesd.diff:
  version bump.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> zaptel-0.7.0.ebuild,
  zaptel-0.8.1.ebuild:
  Add inherit eutils

  17 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.8.1.ebuild:
  fixed SRC_URI

  16 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild:
  removed blocking of dev-sources (bug #44588)

*zaptel-0.8.1 (16 Mar 2004)

  16 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.8.1.ebuild:
  version bump, this version still lacks linux-2.6 support
  (kbuild + sandbox is a problem atm...)

  19 Feb 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild:
  fixed SRC_URI

*zaptel-0.7.0 (04 Jan 2004)

  04 Jan 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild,
  files/zaptel-install_prefix-typo.patch,