@@ -1,19 +1,29 @@
-MD5 b9ef576ee2a004bbdba73c8fd8cef7f4 ChangeLog 2110
-MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
-MD5 4181d4bc03ffde84cb0ea2bc55eacbbf zaptel-0.7.0.ebuild 1403
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 50a2f3af01a95978f69765ecb3e61e8a zaptel-1.0.0.ebuild 3196
 MD5 7f1a2d9310ce76f745a72baaa7a2ec47 zaptel-0.8.1.ebuild 1350
+MD5 4181d4bc03ffde84cb0ea2bc55eacbbf zaptel-0.7.0.ebuild 1403
+MD5 5443aee5ae773bde196704cf0e314bab ChangeLog 2298
+MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
 MD5 2f9c63c938ecf48124ba4fd3e4f2648a zaptel-0.9.1.ebuild 3529
-MD5 a4af67e1ad0e05f458e4bfd459ace19c zaptel-1.0.0.ebuild 3321
+MD5 48c7eb4a7726cb0ce920784778ad2efb files/zaptel-modulesd.patch 1601
+MD5 fae1145da422b8838c2a6ac3405dc4c4 files/zaptel.confd 371
+MD5 c80f1e0e4038771d3e3bc08284ecf917 files/zaptel-0.9.1-modulesd.diff 1941
 MD5 4f38ae7d0fb20dee726303a35ca85eda files/digest-zaptel-0.7.0 64
 MD5 e356380452b756847ed2a73660c97ec4 files/digest-zaptel-0.8.1 134
 MD5 3921a7fd4a60c8785d510e857ff2eabe files/digest-zaptel-0.9.1 64
-MD5 1dcd4bcf154cf1140d716eeeb8892ef3 files/zaptel-0.9.1-experimental-devfs26.diff 6432
-MD5 c80f1e0e4038771d3e3bc08284ecf917 files/zaptel-0.9.1-modulesd.diff 1941
-MD5 fea918445512e51f2019ff20d78a7926 files/zaptel-install_prefix-typo.patch 486
-MD5 e6a38926132312059bd3a8a712d8d88e files/zaptel-mkdir-usrincludelinux.patch 469
-MD5 48c7eb4a7726cb0ce920784778ad2efb files/zaptel-modulesd.patch 1601
-MD5 fae1145da422b8838c2a6ac3405dc4c4 files/zaptel.confd 371
-MD5 b72142a9b09e32506b88b96706abaeb4 files/zaptel.rc6 903
 MD5 9cf4f1d646d216441b7f4508ac7c0e8b files/digest-zaptel-1.0.0 64
-MD5 60910db3ceada75031a91d419832871d files/zaptel-1.0.0-experimental-devfs26.diff 5474
+MD5 1dcd4bcf154cf1140d716eeeb8892ef3 files/zaptel-0.9.1-experimental-devfs26.diff 6432
+MD5 b72142a9b09e32506b88b96706abaeb4 files/zaptel.rc6 903
+MD5 e6a38926132312059bd3a8a712d8d88e files/zaptel-mkdir-usrincludelinux.patch 469
 MD5 c80f1e0e4038771d3e3bc08284ecf917 files/zaptel-1.0.0-modulesd.diff 1941
+MD5 fea918445512e51f2019ff20d78a7926 files/zaptel-install_prefix-typo.patch 486
+MD5 60910db3ceada75031a91d419832871d files/zaptel-1.0.0-experimental-devfs26.diff 5474
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFBYM2YMSkoRwEucGERArkdAKCk5AIxgMuI0cwR3WRN5FgqIDa3vwCg81Vw
+8uDTy47NnduYKcst1zSHKkg=
+=Cfo8
+-----END PGP SIGNATURE-----
